--- a/g5Mindr/g5Mindr/XIBs/Cells/g5ConditionTableViewCell.xib
+++ b/g5Mindr/g5Mindr/XIBs/Cells/g5ConditionTableViewCell.xib
@@ -15,12 +15,12 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="79"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" alpha="0.050000000000000003" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="iF5-5Z-djt" userLabel="Background Image">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
+                    <imageView userInteractionEnabled="NO" alpha="0.050000000000000003" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iF5-5Z-djt" userLabel="Background Image">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="79"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </imageView>
-                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aTM-A0-geK" userLabel="View - Separator">
-                        <rect key="frame" x="0.0" y="79" width="320" height="1"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aTM-A0-geK" userLabel="View - Separator">
+                        <rect key="frame" x="0.0" y="78" width="320" height="1"/>
                         <color key="backgroundColor" red="0.22352941176470587" green="0.33333333333333331" blue="0.45098039215686275" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="1" id="RiL-qm-vMk"/>
