--- a/g5Mindr/g5BounceNavigator/HROBounceNavigationController.xib
+++ b/g5Mindr/g5BounceNavigator/HROBounceNavigationController.xib
@@ -1,28 +1,31 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="g5BounceNavigationController">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HROBounceNavigationController">
             <connections>
                 <outlet property="backButtonBottomConstraint" destination="tbO-W0-nhe" id="2UR-f6-oQu"/>
                 <outlet property="backButtonLeadingConstraint" destination="6SS-cA-nTa" id="voz-5z-dgq"/>
-                <outlet property="cancelButtonBackground" destination="43e-Lo-CK2" id="ZKS-hG-B5h"/>
-                <outlet property="cancelButtonContainerView" destination="IjJ-lc-C2D" id="LXi-eb-Mer"/>
-                <outlet property="centerButtonBackgroundImage" destination="rn1-kR-7VZ" id="7dV-9k-dIm"/>
+                <outlet property="bottomButton" destination="ERZ-VW-qkk" id="3DB-EA-lKh"/>
+                <outlet property="bottomButtonBackgroundImage" destination="rn1-kR-7VZ" id="js6-B9-tXg"/>
+                <outlet property="bounceButton" destination="xMY-Wn-pBc" id="Wy0-T2-Veq"/>
+                <outlet property="bounceButtonBackground" destination="43e-Lo-CK2" id="WDS-3W-waW"/>
+                <outlet property="bounceButtonContainerView" destination="IjJ-lc-C2D" id="Zhf-gW-ldh"/>
                 <outlet property="centerButtonBottomConstraint" destination="uNk-PM-xpg" id="YdY-ie-WLL"/>
                 <outlet property="centerButtonHeightConstraint" destination="Rpd-l1-bQZ" id="g2W-bH-suw"/>
                 <outlet property="contentView" destination="Sog-WI-tIC" id="F71-2X-kxJ"/>
-                <outlet property="nextButtonBackground" destination="fNq-rv-9gl" id="S6I-Rb-C1K"/>
+                <outlet property="leftButton" destination="Hdf-Ze-TJu" id="7lF-4E-tW6"/>
+                <outlet property="leftButtonBackground" destination="5Zh-0Y-BIo" id="owQ-6W-kKp"/>
                 <outlet property="nextButtonBottomConstraint" destination="pI9-cO-jUd" id="CgS-39-dbH"/>
-                <outlet property="nextButtonContainerView" destination="uEN-4M-Brb" id="DlX-3c-QNd"/>
-                <outlet property="nextButtonOverlayImageView" destination="K2Z-Ap-Akz" id="T23-MB-a4T"/>
                 <outlet property="nextButtonTrailingConstraint" destination="8Uc-vA-oTY" id="UkY-4g-GRV"/>
-                <outlet property="previousButtonBackground" destination="5Zh-0Y-BIo" id="2yU-Os-5D6"/>
                 <outlet property="previousButtonBottomConstraint" destination="IMY-AV-95v" id="Uig-9f-Rcu"/>
                 <outlet property="previousButtonHeightConstraint" destination="DZx-Vq-EUd" id="eFX-Jx-vFR"/>
+                <outlet property="rightButton" destination="rLp-2l-R6L" id="spL-Uc-2hN"/>
+                <outlet property="rightButtonBackground" destination="uEN-4M-Brb" id="y7b-3m-d87"/>
+                <outlet property="rightButtonOverlayImageView" destination="K2Z-Ap-Akz" id="IO5-cd-lR5"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -60,7 +63,7 @@
                         <constraint firstAttribute="width" constant="60" id="xuR-35-UyD"/>
                     </constraints>
                 </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uEN-4M-Brb">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uEN-4M-Brb" userLabel="Right Button Content View">
                     <rect key="frame" x="600" y="600" width="130" height="130"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fNq-rv-9gl" userLabel="Background - Next">
@@ -77,7 +80,7 @@
                                 </mask>
                             </variation>
                         </imageView>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rLp-2l-R6L" userLabel="Button - Next">
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rLp-2l-R6L" userLabel="Right Button">
                             <rect key="frame" x="21" y="21" width="44" height="44"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <constraints>
