--- a/g5Mindr/g5Mindr/ViewControllers/ReminderListVC/MDRReminderList.storyboard
+++ b/g5Mindr/g5Mindr/ViewControllers/ReminderListVC/MDRReminderList.storyboard
@@ -51,22 +51,12 @@
                                                         <constraint firstAttribute="height" constant="32" id="hIb-1A-yHK"/>
                                                     </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="clip" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b4C-Ou-8NL" userLabel="🙁">
-                                                    <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="L9J-mg-I8U">
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="24" id="Tdo-Nu-eL4"/>
-                                                        <constraint firstAttribute="width" constant="24" id="kyT-PR-uYp"/>
+                                                        <constraint firstAttribute="width" constant="24" id="1dQ-Jw-cwv"/>
+                                                        <constraint firstAttribute="height" constant="24" id="lXZ-Kh-QLX"/>
                                                     </constraints>
-                                                    <attributedString key="attributedText">
-                                                        <fragment content="😟">
-                                                            <attributes>
-                                                                <font key="NSFont" size="20" name="Emoji-One-Regular"/>
-                                                                <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="truncatingTail" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
-                                                            </attributes>
-                                                        </fragment>
-                                                    </attributedString>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
+                                                </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SNO-JW-Mwb">
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="15" id="Rfj-LS-3pW"/>
@@ -126,6 +116,7 @@
                                                 <constraint firstItem="fel-Jg-Gcv" firstAttribute="leading" secondItem="H2e-oI-OTq" secondAttribute="leading" constant="75" id="3mc-E3-rXW"/>
                                                 <constraint firstItem="SNO-JW-Mwb" firstAttribute="trailing" secondItem="fel-Jg-Gcv" secondAttribute="trailing" id="4BO-vV-elh"/>
                                                 <constraint firstItem="6fo-r9-oka" firstAttribute="top" secondItem="Uvm-QS-pls" secondAttribute="top" id="4pf-Cm-n82"/>
+                                                <constraint firstItem="L9J-mg-I8U" firstAttribute="centerX" secondItem="6fo-r9-oka" secondAttribute="centerX" id="85e-QV-uep"/>
                                                 <constraint firstAttribute="trailing" secondItem="sPL-Ou-jx8" secondAttribute="trailing" id="9fD-fA-uye"/>
                                                 <constraint firstItem="mK3-AX-cgr" firstAttribute="centerY" secondItem="H2e-oI-OTq" secondAttribute="centerY" id="B1b-tK-sWk"/>
                                                 <constraint firstItem="sPL-Ou-jx8" firstAttribute="leading" secondItem="H2e-oI-OTq" secondAttribute="leading" id="C4X-Fm-Wb7"/>
@@ -137,21 +128,16 @@
                                                 <constraint firstItem="Uvm-QS-pls" firstAttribute="height" secondItem="QRn-hN-Evr" secondAttribute="height" id="Ngc-Ix-Tg7"/>
                                                 <constraint firstItem="SNO-JW-Mwb" firstAttribute="leading" secondItem="fel-Jg-Gcv" secondAttribute="leading" id="R1v-Eu-aEa"/>
                                                 <constraint firstItem="6fo-r9-oka" firstAttribute="centerX" secondItem="Uvm-QS-pls" secondAttribute="centerX" id="RVX-xc-S8u"/>
-                                                <constraint firstItem="6fo-r9-oka" firstAttribute="centerX" secondItem="b4C-Ou-8NL" secondAttribute="centerX" id="SZY-SU-Qot"/>
                                                 <constraint firstItem="SNO-JW-Mwb" firstAttribute="top" secondItem="fel-Jg-Gcv" secondAttribute="bottom" constant="7" id="VCB-v2-ASB"/>
-                                                <constraint firstItem="b4C-Ou-8NL" firstAttribute="centerX" secondItem="mK3-AX-cgr" secondAttribute="centerX" id="YGa-hE-Fhn"/>
-                                                <constraint firstItem="b4C-Ou-8NL" firstAttribute="centerY" secondItem="mK3-AX-cgr" secondAttribute="centerY" id="cFJ-sb-KgE"/>
+                                                <constraint firstItem="L9J-mg-I8U" firstAttribute="centerY" secondItem="6fo-r9-oka" secondAttribute="centerY" id="dtr-qP-A6S"/>
                                                 <constraint firstAttribute="trailing" secondItem="Uvm-QS-pls" secondAttribute="trailing" constant="25" id="gaR-lv-HjR"/>
-                                                <constraint firstItem="6fo-r9-oka" firstAttribute="centerY" secondItem="b4C-Ou-8NL" secondAttribute="centerY" id="h2j-pi-uNT"/>
                                                 <constraint firstItem="6fo-r9-oka" firstAttribute="centerY" secondItem="SNO-JW-Mwb" secondAttribute="centerY" id="hMJ-QK-M4y"/>
                                                 <constraint firstAttribute="bottom" secondItem="sPL-Ou-jx8" secondAttribute="bottom" id="lGP-WK-M0p"/>
-                                                <constraint firstItem="b4C-Ou-8NL" firstAttribute="centerX" secondItem="mK3-AX-cgr" secondAttribute="centerX" id="lle-Bm-nIh"/>
                                                 <constraint firstItem="6fo-r9-oka" firstAttribute="centerY" secondItem="H2e-oI-OTq" secondAttribute="centerY" id="pG8-p2-74d"/>
                                                 <constraint firstItem="SNO-JW-Mwb" firstAttribute="top" secondItem="fel-Jg-Gcv" secondAttribute="bottom" constant="7" id="sRB-ro-96Y"/>
                                                 <constraint firstItem="Uvm-QS-pls" firstAttribute="width" secondItem="QRn-hN-Evr" secondAttribute="width" id="tDW-2C-ze9"/>
                                                 <constraint firstItem="Uvm-QS-pls" firstAttribute="centerY" secondItem="H2e-oI-OTq" secondAttribute="centerY" id="vLB-yF-XKw"/>
                                                 <constraint firstItem="fel-Jg-Gcv" firstAttribute="top" secondItem="H2e-oI-OTq" secondAttribute="topMargin" constant="32" id="y0X-e7-geS"/>
-                                                <constraint firstItem="b4C-Ou-8NL" firstAttribute="centerY" secondItem="mK3-AX-cgr" secondAttribute="centerY" id="zOF-OH-Gya"/>
                                                 <constraint firstItem="6fo-r9-oka" firstAttribute="centerX" secondItem="mK3-AX-cgr" secondAttribute="centerX" id="zgF-9X-QiR"/>
                                                 <constraint firstItem="Uvm-QS-pls" firstAttribute="centerX" secondItem="QRn-hN-Evr" secondAttribute="centerX" id="zhI-5L-6jI"/>
                                             </constraints>
@@ -162,23 +148,19 @@
                                                     <exclude reference="JkO-jl-Gg0"/>
                                                     <exclude reference="Ndp-eR-M24"/>
                                                     <exclude reference="RVX-xc-S8u"/>
-                                                    <exclude reference="SZY-SU-Qot"/>
-                                                    <exclude reference="h2j-pi-uNT"/>
                                                     <exclude reference="hMJ-QK-M4y"/>
                                                     <exclude reference="pG8-p2-74d"/>
                                                     <exclude reference="zgF-9X-QiR"/>
+                                                    <exclude reference="y0X-e7-geS"/>
                                                     <exclude reference="Jf6-Yp-OgP"/>
                                                     <exclude reference="VCB-v2-ASB"/>
-                                                    <exclude reference="cFJ-sb-KgE"/>
-                                                    <exclude reference="lle-Bm-nIh"/>
-                                                    <exclude reference="y0X-e7-geS"/>
                                                     <exclude reference="3Sc-at-9JS"/>
                                                 </mask>
                                             </variation>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                         <connections>
-                                            <outlet property="emoticonLabel" destination="b4C-Ou-8NL" id="wtU-Gh-dki"/>
+                                            <outlet property="emojiImageView" destination="L9J-mg-I8U" id="3uC-tp-xbx"/>
                                             <outlet property="explanationLabel" destination="SNO-JW-Mwb" id="fjW-CX-RjX"/>
                                             <outlet property="innerRingImageView" destination="6fo-r9-oka" id="Y7h-fq-53U"/>
                                             <outlet property="onSwitch" destination="Uvm-QS-pls" id="4Uw-5C-3sb"/>
